# raytracing

./: CMakeLists.txt  CMakeSettings.json
.github/workflows/: ccpp.yml
include/: camera.h  color.h  light.h  ray.h  scene.h  shape.h  sphere.h  vector3.h
src/: CMakeLists.txt  main.cpp
